examples/c/error-codes/violates-constraint/fatal/CV-TDG15-bad-static.output
CV-TDG15-bad-static.c:7:8: error: redefinition of 'foo'
struct foo {
       ^
CV-TDG15-bad-static.c:3:8: note: previous definition is here
struct foo {
       ^
1 error generated.
Translation failed (kcc_config dumped). To repeat, run this command in directory fatal:
